--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,10 @@
     "rootDir": "src",
     "jsx": "react"
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "references": [
+    {
+      "path": "../jupyterlab-toc"
+    }
+  ]
 }
