split toc - lib

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "declaration": true,
+    "composite": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
     "skipLibCheck": true,
