--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "description": "Table of Contents extension for JupyterLab",
   "keywords": [
     "jupyter",
-    "jupyterlab",
-    "jupyterlab-extension"
+    "jupyterlab"
   ],
   "homepage": "https://github.com/jupyterlab/jupyterlab-toc",
   "bugs": {
@@ -39,7 +38,6 @@
     ]
   },
   "dependencies": {
-    "@jupyterlab/application": "^2.0.0",
     "@jupyterlab/apputils": "^2.0.0",
     "@jupyterlab/cells": "^2.0.0",
     "@jupyterlab/coreutils": "^4.0.0",
@@ -52,7 +50,7 @@
     "@lumino/algorithm": "^1.2.3",
     "@lumino/coreutils": "^1.4.2",
     "@lumino/messaging": "^1.3.3",
-    "@lumino/widgets": "^1.10.2",
+    "@lumino/widgets": "^1.11.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
@@ -73,9 +71,5 @@
   },
   "publishConfig": {
     "access": "public"
-  },
-  "jupyterlab": {
-    "extension": "lib/extension.js",
-    "schemaDir": "schema"
   }
 }
